fixed issues with navbar text alignment and color

--- a/Testing/wwwroot/css/site.css
+++ b/Testing/wwwroot/css/site.css
@@ -3,7 +3,6 @@ for details on configuring this project to bundle and minify static web assets. 
 
 a.navbar-brand {
   white-space: normal;
-  text-align: center;
   word-break: break-all;
 }
 
@@ -22,9 +21,9 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: RGB(1,216,251);
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
@@ -166,6 +165,11 @@ tr {
     background-color: transparent;
 }
 
-.nav-item{
+.navbar {
+    background-color: black;
     align-items: flex-start;
+}
+
+.library-color {
+
 }
